<resources>
    <string name="app_name">My Application</string>
    <string name="img_group">IMG_group</string>
    <string name="formulario_de_contacto">Formulario de contacto</string>
    <string name="por_favor_rellene_la_siguiente_informaci_n">Por favor rellene la siguiente información</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_su_n_mero_de_contacto">Ingrese su número de contacto</string>
    <string name="motivo_de_contacto_lo_m_s_detallado_y_expl_cito_posible">Motivo de contacto, lo más detallado y explícito posible</string>
    <string name="button">Button</string>
    <string name="enviar">Enviar</string>
    <string name="los_404">LOS 404</string>
    <string name="img_user1">IMG_USER1</string>
    <string name="img_user2">IMG_USER2</string>
    <string name="img_user3">IMG_USER3</string>
    <string name="img_user4">IMG_USER4</string>
    <string name="somos_un_equipo_de_4_estudiantes_de_ingenier_a_en_inform_tica_con_conocimientos_en_diversos_lenguajes_y_tecnolog_as_incluyendo_java_python_mysql_aragon_html_javascript_c_c_y_css_nos_enfocamos_en_el_aprendizaje_constante_el_desarrollo_de_proyectos_innovadores_y_la_aplicaci_n_pr_ctica_de_nuestras_habilidades_para_resolver_problemas_tecnol_gicos">Somos un equipo de 4 estudiantes de Ingeniería en Informática con conocimientos en diversos lenguajes y tecnologías, incluyendo Java, Python, MySQL, Aragon, HTML, JavaScript, C, C++ y CSS. Nos enfocamos en el aprendizaje constante, el desarrollo de proyectos innovadores y la aplicación práctica de nuestras habilidades para resolver problemas tecnológicos.</string>
    <string name="contactar">Contactar</string>
    <string name="gonzalo_fuentes">Gonzalo Fuentes</string>
    <string name="benjamin_pizarro">Benjamin Pizarro</string>
    <string name="aaron_centeno">Aaron Centeno</string>
    <string name="ignacio_navarrete">Ignacio Navarrete</string>
    <string name="cancelar">Cancelar</string>
    <string name="Scroll">Scroll</string>
    <string name="ingeniero_en_inform_tica">Ingeniero en informática</string>
    <string name="soy_un_desarrollador_apasionado_por_crear_experiencias_digitales_memorables_tanto_en_aplicaciones_como_en_juegos_me_manejo_con_fluidez_en_java_html_css_javascript_c_y_sourcepawn_esta_versatilidad_me_permite_abordar_proyectos_que_van_desde_interfaces_web_y_m_viles_hasta_la_l_gica_y_el_dise_o_de_mec_nicas_de_juego_personalizadas_disfruto_explorar_distintas_tecnolog_as_combinar_programaci_n_estructurada_con_creatividad_interactiva_y_ofrecer_resultados_que_sean_tanto_innovadores_como_funcionales" translatable="false">Soy un desarrollador apasionado por crear experiencias digitales memorables, tanto en aplicaciones como en juegos. Me manejo con fluidez en Java, HTML, CSS, JavaScript, CSSharp y SourcePawn. Esta versatilidad me permite abordar proyectos que van desde interfaces web y móviles hasta la lógica y el diseño de mecánicas de juego personalizadas. Disfruto explorar distintas tecnologías, combinar programación estructurada con creatividad interactiva y ofrecer resultados que sean tanto innovadores como funcionales.</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="javascript">JAVASCRIPT</string>
    <string name="sourcepawn">Sourcepawn</string>
    <string name="cssharp">CSSharp</string>
    <string name="java">JAVA</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="soy_desarrollador_con_experiencia_en_java_c_html_css_y_javascript_apasionado_por_crear_aplicaciones_eficientes_y_funcionales_tanto_en_el_mbito_web_como_en_entornos_de_software_m_s_complejos_a_lo_largo_de_mi_formaci_n_y_diversos_proyectos_he_aprendido_a_manejar_programaci_n_orientada_a_objetos_desarrollo_de_interfaces_intuitivas_y_responsivas_y_la_integraci_n_de_tecnolog_as">Soy desarrollador con experiencia en Java, C#, HTML, CSS y JavaScript, apasionado por crear aplicaciones eficientes y funcionales tanto en el ámbito web como en entornos de software más complejos. A lo largo de mi formación y diversos proyectos he aprendido a manejar programación orientada a objetos, desarrollo de interfaces intuitivas y responsivas, y la integración de tecnologías</string>
    <string name="salir">Volver</string>
    <string name="c">c++</string>
    <string name="todo1">TODO1</string>
    <string name="todo">todo</string>
    <string name="todos">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo8">Soy desarrollador con experiencia en Java, C, HTML, CSS y JavaScript, apasionado por crear aplicaciones eficientes y funcionales tanto en el ámbito web como en entornos de software más complejos. A lo largo de mi formación y diversos proyectos he aprendido a manejar programación orientada a objetos, desarrollo de interfaces intuitivas y responsivas, y la integración de tecnologías.</string>
    <string name="todo9">TODO</string>
    <string name="todo11">TODO11</string>
    <string name="todo12">todo12</string>
    <string name="todo13">TODO13</string>
    <string name="proyectos">PROYECTOS</string>
    <string name="telefono">TELEFONO</string>
    <string name="a_os_exp">AÑOS EXP</string>
    <string name="correo">CORREO</string>
    <string name="todo14">TODO14</string>
    <string name="_56_962576335">+56 962576335</string>
    <string name="_5_a_os_expiencia">5 Años Expiencia</string>
    <string name="a_centeno2_hotmail_com">a.centeno2@hotmail.com</string>
    <string name="_30_proyectos">30 proyectos+</string>
    <string name="benjam_n_pizarro">Benjamín Pizarro</string>
    <string name="ingenier_a_en_inform_tica">Ingeniería en Informática</string>
    <string name="soy_estudiante_de_ingenier_a_en_inform_tica_con_inter_s_en_el_desarrollo_de_software_y_una_s_lida_base_en_varios_lenguajes_de_programaci_n_me_encuentro_en_constante_aprendizaje_para_ampliar_mis_habilidades_y_enfrentar_nuevos_desaf_os_tecnol_gicos">Soy estudiante de ingeniería en informática con interés en el desarrollo de software y una sólida base en varios lenguajes de programación. Me encuentro en constante aprendizaje para ampliar mis habilidades y enfrentar nuevos desafíos tecnológicos.</string>
    <string name="html_description">Conocimientos en la creación y estructuración de contenido web, utilizando etiquetas semánticas y la integración de CSS para el diseño.</string>
    <string name="html_logo_description">Logo de HTML</string>
    <string name="python">Python</string>
    <string name="python_description">Habilidades en el desarrollo de scripts, automatización de tareas, análisis de datos y creación de APIs. Fuerte comprensión de la sintaxis y buenas prácticas.</string>
    <string name="python_logo_description">Logo de Python</string>
    <string name="volver_atras">Volver</string>
    <string name="detalle_de_la_solicitud">Detalle de la Solicitud</string>
    <string name="developer_name">Tu Nombre</string>
    <string name="developer_title">Desarrollador Full Stack</string>
    <string name="languages_title">Lenguajes de Programación</string>
    <string name="hire">Contratar</string>
    <string name="profile_image">Foto de perfil</string>
    <string name="view_all">Ver todos</string>
    <string name="edit_profile">Editar Perfil</string>
</resources>