<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dd82e220_f971_44b7_9782_1058402201b5"
    tools:context=".GFuentesActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/Scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1200dp"

            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,TextSizeCheck">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/gonzalo_fuentes"
                app:srcCompat="@drawable/_522581" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/gonzalo_fuentes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingeniero_en_inform_tica"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/soy_un_desarrollador_apasionado_por_crear_experiencias_digitales_memorables_tanto_en_aplicaciones_como_en_juegos_me_manejo_con_fluidez_en_java_html_css_javascript_c_y_sourcepawn_esta_versatilidad_me_permite_abordar_proyectos_que_van_desde_interfaces_web_y_m_viles_hasta_la_l_gica_y_el_dise_o_de_mec_nicas_de_juego_personalizadas_disfruto_explorar_distintas_tecnolog_as_combinar_programaci_n_estructurada_con_creatividad_interactiva_y_ofrecer_resultados_que_sean_tanto_innovadores_como_funcionales"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintLongText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="17dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/html"
                    app:srcCompat="@drawable/cssharp"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/css"
                    app:srcCompat="@drawable/sourcepawn1" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/javascript"
                    app:srcCompat="@drawable/pythoned" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="17dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sourcepawn"
                    app:srcCompat="@drawable/html"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cssharp"
                    app:srcCompat="@drawable/css1"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/java"
                    app:srcCompat="@drawable/javascript"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/BTN_regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/volver_atras"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>